--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -1,1 +1,17 @@
+twilio.sid=${TWILIO_SID}
+twilio.key=${TWILIO_KEY}
+twilio.phone.from=${TWILIO_PHONE_FROM}
+twilio.phone.to=${TWILIO_PHONE_TO}
 
+# Manipular as estruturas (Tables)
+spring.jpa.hibernate.ddl-auto=update
+
+# Informação para conectar ao banco de dados
+spring.datasource.url=jdbc:mysql://db_dsmeta.mysql.dbaas.com.br:3306/${LC_DATABASE_NAME}?useTimezone=true&serverTimezone=UTC
+spring.datasource.username=${LC_DATABASE_NAME}
+spring.datasource.password=${LC_MYSQL_PASSWORD}
+spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
+
+# Show SQL in console
+spring.jpa.show-sql: true
+spring.jpa.properties.hibernate.format_sql=true
