--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -7,7 +7,7 @@ twilio.phone.to=${TWILIO_PHONE_TO}
 spring.jpa.hibernate.ddl-auto=update
 
 # Informação para conectar ao banco de dados
-spring.datasource.url=jdbc:mysql://db_dsmeta.mysql.dbaas.com.br:3306/${LC_DATABASE_NAME}?useTimezone=true&serverTimezone=UTC
+spring.datasource.url=jdbc:mysql://${LC_DATABASE_URL}:3306/${LC_DATABASE_NAME}?useTimezone=true&serverTimezone=UTC
 spring.datasource.username=${LC_DATABASE_NAME}
 spring.datasource.password=${LC_MYSQL_PASSWORD}
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
